--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,25 @@
+@font-face {
+  font-family: 'GraphikRegular';
+  src: url(./fonts/GraphikRegular.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'GraphikMedium';
+  src: url(./fonts/GraphikMedium.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'GraphikSemibold';
+  src: url(./fonts/GraphikSemibold.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'GraphikBold';
+  src: url(./fonts/GraphikBold.woff) format('woff');
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'GraphikMedium', sans-serif;
 }
 
 body {
