--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,16 @@
   src: url(./fonts/GraphikBold.woff) format('woff');
 }
 
+@font-face {
+  font-family: 'PlayfairDisplayBold';
+  src: url(./fonts/PlayfairDisplayBold.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'PlayfairDisplayExtraBold';
+  src: url(./fonts/PlayfairDisplayExtraBold.woff) format('woff');
+}
+
 :root {
   font-family: 'GraphikMedium', sans-serif;
 }
@@ -26,4 +36,5 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  background: #14181c;
 }
