--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -1,6 +1,7 @@
 .Home {
   flex: 1;
   padding-top: 350px;
+  padding-bottom: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,4 +27,17 @@
 .Home-subheading {
   margin-top: 40px;
   color: #789;
+}
+
+.Home-trendingList {
+  margin-top: 50px;
+  display: flex;
+  gap: 20px;
+}
+
+.Home-trendingMovie {
+  display: flex;
+  border: 1px solid rgba(245, 245, 245, 0.5);
+  border-radius: 10px;
+  overflow: hidden;
 }
