--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@
 }
 
 @font-face {
+  font-family: 'PlayfairDisplayMedium';
+  src: url(./fonts/PlayfairDisplayMedium.woff) format('woff');
+}
+
+@font-face {
   font-family: 'PlayfairDisplayBold';
   src: url(./fonts/PlayfairDisplayBold.woff) format('woff');
 }
@@ -26,6 +31,11 @@
 @font-face {
   font-family: 'PlayfairDisplayExtraBold';
   src: url(./fonts/PlayfairDisplayExtraBold.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'PlayfairDisplayBlack';
+  src: url(./fonts/PlayfairDisplayBlack.woff) format('woff');
 }
 
 :root {
@@ -39,6 +49,7 @@ body {
   background: #14181c;
 }
 
+h2,
 p,
 ul {
   margin: 0;
@@ -47,4 +58,8 @@ ul {
 
 a {
   color: inherit;
+}
+
+button {
+  font-family: inherit;
 }
