--- a/src/components/styles/Background.css
+++ b/src/components/styles/Background.css
@@ -2,6 +2,8 @@
   display: flex;
   position: absolute;
   top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: -100;
   box-shadow: 0px -50px 100px 100px #14181c inset;
 }
