--- a/src/components/styles/Poster.css
+++ b/src/components/styles/Poster.css
@@ -1,4 +1,5 @@
 .Poster {
+  aspect-ratio: 2 / 3;
   display: flex;
   border: 1px solid rgba(245, 245, 245, 0.5);
   border-radius: 5px;
@@ -6,9 +7,14 @@
   transition: box-shadow 100ms;
 }
 
-.Poster > img {
+.Poster-image,
+.Poster-placeholder {
   width: 100%;
   z-index: -10;
+}
+
+.Poster-placeholder {
+  background-color: #1b1b1b;
 }
 
 .Poster--clickable:hover {
