--- a/src/pages/styles/Search.css
+++ b/src/pages/styles/Search.css
@@ -6,6 +6,7 @@
 }
 
 .Search-content {
+  z-index: 10;
   width: 950px;
   margin: 0 auto;
   display: flex;
@@ -26,12 +27,19 @@
 
 .Search-main {
   flex: 1 0 670px;
+  display: flex;
+  flex-direction: column;
 }
 
-.Search-noMatches {
+.Search-info {
   color: #9ab;
   font-family: 'GraphikRegular';
   font-size: 0.9rem;
+}
+
+.Search-results {
+  display: flex;
+  flex-direction: column;
 }
 
 .Search-aside {
