--- a/src/pages/styles/Film.css
+++ b/src/pages/styles/Film.css
@@ -74,6 +74,7 @@
   margin-top: 18px;
   font-family: 'PlayfairDisplayMedium';
   font-size: 1.05rem;
+  text-align: justify;
   line-height: 1.5;
 }
 
